--- a/src/Pages/Login/Login.module.css
+++ b/src/Pages/Login/Login.module.css
@@ -106,3 +106,20 @@
   .error {
     border-color: #ff0000; 
   }
+
+  .footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 4px;
+    margin-bottom: 15px;
+  }
+
+  .footer p{
+    font-size: 14px;
+  }
+
+.link{
+    color: black;
+    font-weight: bold;
+  }
