--- a/src/Pages/Register/Register.module.css
+++ b/src/Pages/Register/Register.module.css
@@ -11,7 +11,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 15px;
     gap: 10px;
 }
 .title{
@@ -97,4 +97,21 @@
 
   .inputError {
     border-color: #ff0000; 
+  }
+
+  .footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 4px;
+    margin-bottom: 15px;
+  }
+
+  .footer p{
+    font-size: 14px;
+  }
+
+.link{
+    color: black;
+    font-weight: bold;
   }
