--- a/src/Components/CategoryCards/CategoryCards.module.css
+++ b/src/Components/CategoryCards/CategoryCards.module.css
@@ -1,7 +1,9 @@
-.cardsContainer{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: start;
-    align-items:center;
-    margin-left: 8%;
+.cardsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: center;
+  width: 100%;
+  margin-top: 40px;
+  margin-left: 4%;
 }
