--- a/src/Pages/NewInspection/NewInspection.module.css
+++ b/src/Pages/NewInspection/NewInspection.module.css
@@ -1,8 +1,220 @@
+.mainContainer {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 50px;
+}
 
+/* FORM */
 
-  .wrapperTitle{
-    font-weight: 400;
-    font-size: 51.2px;
-    line-height: 61.96px;
-    text-align: center;
-  }
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.renderFunctionDiv {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.navigation {
+  margin-left: 33px;
+  margin-top: 33px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5px;
+  align-self: flex-start;
+  width: 100%;
+}
+.navigation span {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24.2px;
+  letter-spacing: 0em;
+  color: #757575;
+}
+.link {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24.2px;
+  letter-spacing: 0em;
+  text-decoration: none;
+  color: #757575;
+}
+.link:hover {
+  color: black;
+}
+.navSpan {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24.2px;
+  letter-spacing: 0em;
+  color: #757575;
+  cursor: pointer;
+}
+
+.navSpan:hover {
+  color: black;
+}
+
+.icon {
+  color: #757575;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.title {
+  font-size: 51px;
+  font-weight: 400;
+  line-height: 62px;
+  letter-spacing: 0em;
+
+  color: #212121;
+}
+.subtitle {
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 39px;
+  letter-spacing: 0em;
+  color: #757575;
+  margin-top: 20px;
+}
+
+.formContainer {
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  margin-top: 20px;
+}
+
+.form {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.inputContainer {
+  display: FLEX;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.inputContainer span {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0em;
+  color: #212121;
+  margin-top: 20px;
+  padding-top: 20px;
+}
+
+.input {
+  width: 365px;
+  height: 56px;
+  border-radius: 8px;
+  border: 1px solid #bdbdbd;
+  padding-left: 15px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  color: #757575;
+}
+
+.input:focus {
+  outline: none;
+}
+
+.identityContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.select {
+  width: 75px;
+  height: 56px;
+  border-radius: 8px;
+  border: 1px solid #bdbdbd;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  color: #757575;
+  padding-left: 5px;
+}
+.select:focus {
+  outline: none;
+}
+.input2 {
+  width: 280px;
+  height: 56px;
+  border-radius: 8px;
+  border: 1px solid #bdbdbd;
+  padding-left: 15px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  color: #757575;
+}
+
+.input2:focus {
+  outline: none;
+}
+
+.formButtonContainer {
+  display: flex;
+  justify-content: center;
+  padding: 60px;
+}
+
+.button {
+  width: 265px;
+  height: 48px;
+  border-radius: 16px;
+  padding: 10px 20px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  background: linear-gradient(180deg, #22aeff 0%, #0288d1 47.97%, #005da5 100%);
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.button:hover {
+  background: #1274bb;
+}
+
+.inputError {
+  border-color: red;
+}
+
+.errors {
+  color: red;
+  margin-bottom: -10px;
+}
+
+/* NO FORM */
+
+.render {
+  display: flex;
+  width: 90%;
+  justify-content: center;
+}
