--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -1,14 +1,14 @@
 .homeContainer {
   position: relative;
-  height: 100vh;
   background-image: url("../../assets/HomeBackground.png");
-  background-size: 100%; /* Ajusta el tamaño de la imagen para cubrir completamente el contenedor */
+  background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el contenedor */
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
 }
 
 .logo {
@@ -54,5 +54,33 @@
 }
 
 .historyButton:hover {
-  background-color: #004080; /* Cambié el color durante el hover */
+  background-color: #004080;
+}
+
+@media only screen and (max-width: 768px) {
+  .homeContainer {
+    height: auto;
+    padding: 20px;
+  }
+
+  .logo {
+    width: 300px;
+    height: 78px;
+    margin-bottom: 100px;
+  }
+
+  .buttonContainer {
+    flex-direction: column;
+    gap: 20px;
+    width: 50%;
+    justify-content: center;
+  }
+
+  .newButton,
+  .historyButton {
+    width: 100%;
+    font-size: 14px;
+    padding: 0px;
+    height: 50px;
+  }
 }
