--- a/src/Pages/Login/Login.module.css
+++ b/src/Pages/Login/Login.module.css
@@ -1,125 +1,182 @@
-.mainContainer{
-    display: flex;
-    background: linear-gradient(180deg, #22AEFF 0%, #0288D1 50%, #005DA5 100%);
-    justify-content: center;
-    height: auto;
-    align-items: center;
-    width: 100%;
-    min-height: 100vh;
+.mainContainer {
+  display: flex;
+  background: linear-gradient(180deg, #22aeff 0%, #0288d1 50%, #005da5 100%);
+  justify-content: center;
+  height: auto;
+  align-items: center;
+  width: 100%;
+  min-height: 100vh;
 }
-.header{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 15px;
-    gap: 10px;
-    height: 35%;
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15px;
+  gap: 10px;
+  height: 35%;
 }
-.title{
-    font-size: 51.2px;
-    font-weight: 500;
-    line-height: 61.96px;
+.title {
+  font-size: 51.2px;
+  font-weight: 500;
+  line-height: 61.96px;
 }
-.logo{
-    width: 90px;
-    height: 90px;
+.logo {
+  width: 90px;
+  height: 90px;
 }
 
-.formContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
-    border-radius: 16px;
-    box-shadow: 0px 4px 4px 0px #00000040;
-    width: 497px;
-    height: 606px;
-    margin: 20px 0px;
-    gap: 10px;
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  border-radius: 16px;
+  box-shadow: 0px 4px 4px 0px #00000040;
+  width: 497px;
+  height: 606px;
+  margin: 20px 0px;
+  gap: 10px;
 }
-.form{
-    height: 65%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around
+.form {
+  height: 65%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
-.inputs{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    height: 60%;
+.inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 60%;
 }
-.inputContainer{
-    width: 365px;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+.inputContainer {
+  width: 365px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .inputContainer span {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 24.2px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24.2px;
 }
 
-.input{
-    width: 365px;
-    height: 56px;
-    border-radius: 8px;
-    border: 1px solid #BDBDBD;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24.2px;
-    padding-left: 10px;
+.input {
+  width: 365px;
+  height: 56px;
+  border-radius: 8px;
+  border: 1px solid #bdbdbd;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24.2px;
+  padding-left: 10px;
 }
 
-
-.button{
-    width: 365px;
-    height: 56px;
-    border-radius: 16px;
-    padding: 10px 20px;
-    background-color: #B3E5FC;
-    border: none;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24.2px;
-    margin-bottom: 15px;
+.button {
+  width: 365px;
+  height: 56px;
+  border-radius: 16px;
+  padding: 10px 20px;
+  background-color: #b3e5fc;
+  border: none;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24.2px;
+  margin-bottom: 15px;
 }
-.button:hover{
-    background-color: #005DA5;
-    cursor: pointer;
-    color: white;
+.button:hover {
+  background-color: #005da5;
+  cursor: pointer;
+  color: white;
 }
 .formContainer span.error {
-    font-size: 14px;
-    color: #ff0000;
-    margin-top: 0px; 
-    margin-bottom: 0px;
+  font-size: 14px;
+  color: #ff0000;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.error {
+  border-color: #ff0000;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 4px;
+  margin-bottom: 15px;
+}
+
+.footer p {
+  font-size: 14px;
+}
+
+.link {
+  color: black;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 768px) {
+  .mainContainer {
+    padding: 20px;
   }
 
-  .error {
-    border-color: #ff0000; 
+  .formContainer {
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+    margin: 20px 0;
+  }
+  .inputs {
+    width: 80%;
   }
 
-  .footer{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 4px;
-    margin-bottom: 15px;
+  .header {
+    margin-top: 10px;
   }
 
-  .footer p{
-    font-size: 14px;
+  .title {
+    font-size: 36px;
+    line-height: 1.2;
   }
 
-.link{
-    color: black;
-    font-weight: bold;
+  .logo {
+    width: 70px;
+    height: 70px;
   }
+
+  .inputContainer {
+    width: 100%;
+  }
+
+  .inputContainer span {
+    font-size: 16px;
+  }
+
+  .input {
+    width: 100%;
+    height: 48px;
+    font-size: 16px;
+  }
+
+  .button {
+    width: 80%;
+    height: 48px;
+    font-size: 16px;
+    margin-top: 20px;
+  }
+
+  .footer p {
+    font-size: 12px;
+  }
+  .form {
+    width: 100%;
+  }
+}
