--- a/src/Components/InspectionCard/InspectionCard.module.css
+++ b/src/Components/InspectionCard/InspectionCard.module.css
@@ -67,3 +67,27 @@
   margin-bottom: 3%;
   color: white;
 }
+@media only screen and (max-width: 768px) {
+  .cardContainer {
+    width: 100%;
+  }
+
+  .categoryImage {
+    height: auto;
+  }
+
+  .categoryTitle {
+    font-size: 14px;
+    height: auto;
+  }
+
+  .body {
+    padding: 10px;
+    gap: 3px;
+  }
+
+  .body span,
+  .text {
+    font-size: 12px;
+  }
+}
