--- a/src/Components/Quizz/Quizz.module.css
+++ b/src/Components/Quizz/Quizz.module.css
@@ -264,14 +264,14 @@
 
 .padContainer {
   border: 2px solid #ccc;
-  width: 400px;
+  width: 100%;
   height: 200px;
   border-radius: 8px;
 }
 
 .padContainer2 {
   border: 2px solid #ccc;
-  width: 400px;
+  width: 48%;
   height: 200px;
   border-radius: 8px;
 }
@@ -399,4 +399,159 @@
 .negativeContainer p {
   color: red;
   font-size: 15px;
+}
+.signCanvas {
+  width: 100%;
+  height: 100%;
+}
+.loadingPdf {
+  width: 10%;
+}
+
+@media only screen and (max-width: 768px) {
+  .mainContainer {
+    width: 100%;
+  }
+  .header {
+    width: 100%;
+  }
+
+  .categoryTitle {
+    font-size: 20px;
+    line-height: 29px;
+  }
+  .subtitle {
+    text-align: center;
+    width: 100%;
+  }
+
+  .headerImage {
+    height: 300px;
+  }
+
+  .headerAlert {
+    font-size: 16px;
+    padding: 10px 20px;
+  }
+
+  .statement {
+    width: 100%;
+    font-size: 14px;
+    padding-bottom: 50px;
+  }
+
+  .body {
+    width: 100%;
+    gap: 40px;
+  }
+  .questionContainer {
+    margin-top: 10px;
+  }
+  .question {
+    font-size: 14px;
+  }
+  .buttonsContainer {
+    margin-top: 20px;
+    margin-left: 5px;
+    gap: 10px;
+  }
+
+  .greenButton {
+    padding: 8px 16px;
+    font-size: 10px;
+    border-radius: 10px;
+  }
+  .redButton {
+    padding: 8px 16px;
+    font-size: 10px;
+    border-radius: 10px;
+  }
+  .blueButton {
+    padding: 0px;
+    font-size: 10px;
+    border-radius: 10px;
+  }
+
+  .point {
+    font-size: 12px;
+  }
+
+  .negativeContainer {
+    margin-top: 20px;
+  }
+  .textArea {
+    font-size: 12px;
+  }
+
+  .footer {
+    width: 100%;
+    gap: 10px;
+  }
+
+  .footerText {
+    font-size: 12px;
+    line-height: 20px;
+    padding: 10px;
+  }
+
+  .footerSpan {
+    margin-top: 80px;
+    font-size: 12px;
+  }
+
+  .finalInput {
+    width: 30px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .quizzButtons {
+    gap: 10px;
+  }
+  .observation {
+    margin-top: 20px;
+  }
+  .observationSpan {
+    font-size: 12px;
+  }
+  .inputIdentity {
+    width: 50%;
+    height: 40px;
+    font-size: 12px;
+  }
+  .signTitle {
+    font-size: 12px;
+  }
+  .negativeContainer p {
+    font-size: 10px;
+  }
+  .inspectorSigns {
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+  }
+  .ownerSignContainer {
+    width: 100%;
+  }
+  .sendButton {
+    padding: 8px 16px;
+    font-size: 14px;
+    text-align: center;
+  }
+  .icon {
+    font-size: 14px;
+  }
+  .exitButton {
+    padding: 8px 16px;
+    font-size: 14px;
+    text-align: center;
+  }
+  .saveButton {
+    padding: 8px 16px;
+    font-size: 14px;
+    text-align: center;
+  }
+  .padContainer2 {
+    width: 100%;
+  }
 }
