--- a/src/Components/SearchBar/SearchBar.module.css
+++ b/src/Components/SearchBar/SearchBar.module.css
@@ -90,3 +90,44 @@
   font-weight: 600 !important;
   align-self: center;
 }
+
+@media only screen and (max-width: 768px) {
+  .searchContainer {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .inputContainer {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .searchInput {
+    width: 100%;
+    border-radius: 16px;
+    margin-bottom: 10px;
+    height: 48px;
+    font-size: 12px;
+  }
+
+  .dateInput {
+    width: 100%;
+    border-radius: 16px;
+    height: 50px;
+  }
+
+  .buttonContainer {
+    flex-direction: column;
+    width: 40%;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+  }
+
+  .searchButton {
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    justify-content: center;
+  }
+}
