--- a/src/Pages/AdminDashboard/AdminDashboard.module.css
+++ b/src/Pages/AdminDashboard/AdminDashboard.module.css
@@ -10,7 +10,6 @@
   width: 25%;
   height: 100%;
   background-color: #f2f7fc;
-  min-height: 100vh;
   display: flex;
   justify-content: center;
 }
@@ -19,4 +18,16 @@
   width: 75%;
   height: 100%;
   min-height: 100vh;
+}
+
+@media only screen and (max-width: 768px) {
+  .mainContainer {
+    flex-direction: column;
+  }
+  .sidebar {
+    width: 100%;
+  }
+  .render {
+    width: 100%;
+  }
 }
