--- a/src/Pages/AdminDashboard/Renders/NewUser/NewUser.module.css
+++ b/src/Pages/AdminDashboard/Renders/NewUser/NewUser.module.css
@@ -3,25 +3,15 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  margin: 15px 50px;
+  width: 100%;
+  margin: 15px;
 }
 .header {
   width: 100%;
   height: 20%;
-  padding-bottom: 50px;
+  padding: 20px 0px;
 }
-.mainContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
-  margin: 15px 50px;
-}
-.header {
-  width: 100%;
-  height: 20%;
-  padding-bottom: 50px;
-}
+
 .header span {
   font-size: 32px;
   font-weight: 400;
@@ -102,4 +92,22 @@
 .createButton:hover {
   background-color: #005da5;
   color: white;
+}
+
+@media only screen and (max-width: 768px) {
+  .inputContainer {
+    width: 90%;
+  }
+  .input {
+    width: 100%;
+    font-size: 14px;
+  }
+  .select {
+    width: 100%;
+    font-size: 14px;
+  }
+  .createButton {
+    width: 50%;
+    font-size: 14px;
+  }
 }
