--- a/src/Pages/Configuration/Renders/PersonalData/PersonalData.module.css
+++ b/src/Pages/Configuration/Renders/PersonalData/PersonalData.module.css
@@ -44,13 +44,12 @@
   box-shadow: 0px 3px 3px 0px #00000040;
 }
 .iconContainer {
-  width: 120px;
-  height: 120px;
+  width: 150px;
+  height: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  margin-top: 20px;
   border: 1px solid #00000080;
 }
 
@@ -181,4 +180,73 @@
 }
 .inputError {
   border-color: red;
+}
+@media only screen and (max-width: 768px) {
+  .header {
+    width: 100%;
+    padding-bottom: 30px;
+  }
+  .header span {
+    font-size: 25px;
+  }
+  .body {
+    flex-direction: column;
+  }
+
+  .leftContainer {
+    width: 100%;
+  }
+  .notEditablePhoto {
+    width: 200px;
+  }
+  .notPicture {
+    width: 200px;
+    align-items: center;
+  }
+
+  .iconContainer {
+    width: 80%;
+    height: 80%;
+    align-self: center;
+  }
+
+  .editablePhoto span,
+  .notEditablePhoto span {
+    font-size: 12px;
+    margin-top: 10px;
+  }
+
+  .inputsContainer {
+    width: 100%;
+    margin-top: 30px;
+  }
+
+  .inputContainer {
+    width: 100%;
+  }
+
+  .inputContainer span {
+    font-size: 16px;
+  }
+
+  .input {
+    width: 100%;
+    font-size: 15px;
+  }
+
+  .buttonsContainer {
+    gap: 20px;
+    margin-top: 30px;
+    width: 100%;
+  }
+
+  .saveButton {
+    width: 100px;
+    padding: 8px 16px;
+    font-size: 14px;
+  }
+
+  .cancelButton {
+    font-size: 14px;
+  }
 }
